# Compiler-C-X86

./: .gitignore  README.md  cc.sh  compile-cpp.sh  compile-gcc.sh  finalproject-gcc.sh  finalproject.sh
Bash/: build-dune-c.sh  build-dune-finalproject.sh  build-finalproject-cpp.sh  compile-cpp.sh  finalproject-cpp.sh  finalproject-py.sh  interpret-cpp2.sh  interpret-gcc.sh  parse_.sh  test-interpret-sub.sh
FinalProjectCpp/: CMakeLists.txt  JSON.cpp  JSON.hpp  compiler.cpp  compiler.hpp  context.cpp  context.hpp  define.hpp  execution.cpp  execution.hpp  interpreter.hpp  main.cpp  main.txt  template.s  token.cpp  token.hpp  types.cpp  types.hpp  write_assembly.cpp  write_assembly.hpp
FinalProjectCpp/assembly/: end.cpp  enter_exit.cpp  functions.cpp  if_else.cpp  ifelse.cpp  init.cpp  operators.cpp  other.cpp  push.cpp  variables.cpp
FinalProjectCpp/subclasses/: arg.hpp  assembly.cpp  assembly.hpp  enter_exit.cpp  expr.cpp  expr.hpp  gstmt.cpp  gstmt.hpp  left_val.cpp  left_val.hpp  litteral.hpp  root.hpp  stmt.cpp  stmt.hpp
ParserBetter/: ast.ml  dune  expr2json.ml  json.ml  lexer.mll  own-tester.sh  parser.mly
TestFiles/: arithmetic.c  fonction.c  if.c  operation.c  variable.c
TestFinal/: array.c  bool.c  break.c  function.c  if.c  loops.c  malloc.c  operations.c  rec.c  scanf.c  scope.c  simplest.c  string.c  test_parser.c  variable.c
bash/: build-dune-finalproject.sh  build-finalproject-cpp.sh  test-interpret.sh
parser/: dune  dune-project
src/: CMakeLists.txt  JSON.cpp  compiler.cpp  context.cpp  context.hpp  define.hpp  main.cpp  main.txt  types.hpp  (+2 more)
(+26 files in other folders)
